// user.proto
syntax = "proto3";

option java_package = "io.nuwe.technical.api.lib";
option java_outer_classname = "UserProto";

package userproto;

// Request payload
message UserRequest {
    int64 id = 1;
}

// Response payload
message UserResponse {
    int64 id = 1;
    string name = 2;
    string email = 3;
    int32 age = 4;
    bool is_subscribed = 5;
}

// User service
service UserService {
    rpc GetUser(UserRequest) returns (UserResponse);
}
